--- a/dist.ini
+++ b/dist.ini
@@ -3,4 +3,7 @@ author  = Jonathan Scott Duff <duff@pobox.com>
 license = Perl_5
 copyright_holder = Jonathan Scott Duff
 copyright_year   = 2010
+version = 0.01
 
+[@Git]
+[ArchiveRelease]
