Undo file removal; use section head for git dir
* Bump version slightly
* Use the section header to specify the name of the directory where to
  place git repositories
* Remove the ability to remove directories created after the build
  process is complete. (At least until I understand the ramifications of
  this and how to do it well)

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Jonathan Scott Duff <duff@pobox.com>
 license = Perl_5
 copyright_holder = Jonathan Scott Duff
 copyright_year   = 2010
-version = 0.02
+version = 0.03
 
 [@Basic]
 
@@ -13,6 +13,8 @@ version = 0.02
 [PodVersion]
 
 [AutoPrereq]
+[Prereqs]
+File::Path = 2.00
 
 [@Git]
 
