--- a/dist.ini
+++ b/dist.ini
@@ -3,21 +3,20 @@ author  = Jonathan Scott Duff <duff@pobox.com>
 license = Perl_5
 copyright_holder = Jonathan Scott Duff
 copyright_year   = 2010
-version = 0.04
+
+[VersionFromPrev]
 
 [@Basic]
+[PruneFiles]
+    filenames = dist.ini
 
-[ManifestSkip]
-[PruneCruft]
 [PkgVersion]
 [PodVersion]
 
 [AutoPrereq]
 [Prereqs]
-File::Path = 2.00
+    File::Path = 2.08
 
 [@Git]
+    tag_format = %v
 
-[TestRelease]
-[ConfirmRelease]
-[UploadToCPAN]
